--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,10 @@ body {
 }
 .bg-rules {
   background-image: url(../img/sfondo.png);
-  background-size: 30rem;
-  background-position: ;
+  background-size: 800px 35%;
+  background-position: -220px -300px;
+  background-repeat: repeat-y;
+  overflow: hidden;
 }
 /* HEADER */
 .header {
